# Kobengine

./: .gitmodules  CMakeLists.txt
cmake/: FetchAndIncludeLibraries.cmake
engine/: CMakeLists.txt
engine/src/events/: Event.h
engine/src/helper/: ServiceLocator.h  Timer.cpp  Timer.h
engine/src/input/: IInputHandler.h  InputHandlerNull.cpp  InputHandlerNull.h  InputManager.cpp  InputManager.h  InputStates.h
engine/src/layers/: ILayer.h  LayerStack.cpp  LayerStack.h  RenderLayer.cpp  RenderLayer.h
engine/src/main/: Application.cpp  Application.h  Kobengine.cpp  Kobengine.h  KobengineEntryPoint.h  main.cpp
engine/src/managers/: AssetManager.cpp  AssetManager.h
engine/src/platform/GLFW/: InputHandlerGLFW.cpp  InputHandlerGLFW.h  WindowGLFW.cpp  WindowGLFW.h
engine/src/scene/: Scene.cpp  Scene.h
engine/src/scene/base/: SceneManager.cpp  SceneManager.h
engine/src/scene/components/: Camera.cpp  Camera.h  Component.cpp  Component.h  LightComponent.cpp  LightComponent.h  MeshFilter.cpp  MeshFilter.h  MeshRenderer.cpp  MeshRenderer.h
engine/src/scene/sceneobject/: SceneObject.cpp  SceneObject.h  Transform.cpp  Transform.h
engine/src/systems/: ISystem.h  LightingSystem.cpp  LightingSystem.h  RenderSystem.cpp  RenderSystem.h
engine/src/window/: IWindow.h  WindowGLFW.cpp  WindowGLFW.h
